Fix bug with collapsing map

--- a/src/app/routes/qa/routes/mapbox/mapbox.component.scss
+++ b/src/app/routes/qa/routes/mapbox/mapbox.component.scss
@@ -7,6 +7,7 @@
 .btn-sidebar-toggle{border-radius:0;box-shadow:0;width:100%;}
 
 .map-container{height:100vh;position:relative;
+    .map-container-main{height:100vh;}
     .map-container-box{position:relative;left:0;transition: .2s ease-in;}
     .map-container-sidebar{background:#fff;overflow-y: auto;}
 }
@@ -14,6 +15,7 @@
 /* Mobile Only */
 @media (max-width: 992px){
     .map-container{
+        .map-container-main{height: calc(100vh - 72px);}
         .map-container-sidebar{position: absolute;left: 100%;top:0;transition: .2s ease-in;min-height: 100%;
         }
         &.open{
